<resources>
    //Main
    <string name="app_name">TaskMaster</string>
    <string name="Login">Inicio de Sesion</string>
    <string name="Nombre">Nombre de Usuario</string>
    <string name="Contrasena">Contraseña</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Registrarse">Registrarse</string>
    <string name="PistaUsuario">ingresa Usuario</string>
    <string name="PistaContraseña">Ingresa Contraseña</string>
    //Registro
    <string name="Registro">Registro de Usuario</string>
    <string name="Volver">Volver</string>

    //Inicio
    <string name="Bienvenida">Bienvenido a TaskMaster</string>
    <string name="Imagen_Inicio">Imagen de Inicio</string>
    <string name="Entrar">Continuar</string>

    //Principal

    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="tarea">Nombre Tarea</string>
    <string name="categoria">Categoria</string>
    <string name="prioridad">Prioridad</string>
    <string name="baja">Baja</string>
    <string name="media">Media</string>
    <string name="alta">Alta</string>
    <string name="completada">Completada</string>
    <string name="importancia">Importancia</string>
    <string name="Progreso">Progreso</string>
    <string name="agregar_tarea">Agregar Tarea</string>
</resources>