<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="354dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Login" />

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nombre" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/PistaUsuario"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Contrasena" />

        <EditText
            android:id="@+id/etContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/PistaContraseña"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="374dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="355dp">

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="182dp"
            android:layout_height="49dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="35dp"
            android:text="@string/Registrarse" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/Ingresar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>