<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/tvRegistro"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:gravity="center"
            android:text="@string/Registro"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvUsuarioRegistro"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:text="@string/Nombre" />

        <EditText
            android:id="@+id/etUsuarioRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/PistaUsuario"
            android:ems="10"
            android:hint="@string/PistaUsuario"
            android:inputType="text"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tvContrasenaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Contrasena" />

        <EditText
            android:id="@+id/etContrasenaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/PistaContraseña"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/Volver" />

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/Registrarse" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>